crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__mask_delete_secret_editor.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
assertion_line: 1069
expression: response
---
{
  "data": {
    "deleteSecret": [
      "aliceCo/in/token",
      "aliceCo/out/token",
      "aliceCo/private/token"
    ]
  },
  "errors": null
}
