crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__mask_delete_secret_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
assertion_line: 1079
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'aliceCo/' with required capability EditSecret",
      "path": [
        "deleteSecret"
      ]
    }
  ]
}
