crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__mask_secrets_editor.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
assertion_line: 985
expression: response
---
{
  "data": {
    "secrets": {
      "edges": [
        {
          "cursor": "aliceCo/in/token",
          "node": {
            "catalogName": "aliceCo/in/token",
            "secretId": "1111111111111111"
          }
        },
        {
          "cursor": "aliceCo/out/token",
          "node": {
            "catalogName": "aliceCo/out/token",
            "secretId": "2222222222222222"
          }
        },
        {
          "cursor": "aliceCo/private/token",
          "node": {
            "catalogName": "aliceCo/private/token",
            "secretId": "3333333333333333"
          }
        }
      ]
    }
  },
  "errors": null
}
