crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__mask_secrets_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
assertion_line: 995
expression: response
---
{
  "data": {
    "secrets": {
      "edges": []
    }
  },
  "errors": null
}
