crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__mask_set_secret_editor.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
assertion_line: 1026
expression: response
---
{
  "data": {
    "setSecret": {
      "changed": true,
      "secret": {
        "catalogName": "aliceCo/db/password",
        "secretId": "[secretId]"
      }
    }
  },
  "errors": null
}
