crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__secret_lifecycle.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
expression: "transcribe(&server, &tokens, steps).await"
---
alice: a first set creates the secret
  changed=true id-1
alice: an identical document is a no-op
  changed=false id-1
alice: a newer document mints a new id
  changed=true id-2
alice: a stale document is rejected, not applied
  error: the stored secret 'aliceCo/db/password' is newer than the provided document; re-encrypt the value you intend to set, or fetch the current document
alice: a tie is allowed
  changed=true id-3
alice: a document is bound to the name it was wrapped for
  error: document is wrapped for secret 'aliceCo/db/password', not 'aliceCo/db/other'; a wrapped document is bound to its name and cannot be set under another
bob: a viewer must not set a secret
  error: PermissionDenied: bob@example.test is not authorized to access prefix or name 'aliceCo/db/password' with required capability EditSecret
carol: an Editor may set
  changed=true id-4
carol: an Editor may list
  aliceCo/db/editor-set=id-4, aliceCo/db/password=id-3
carol: an Editor may delete
  aliceCo/db/editor-set
alice: an editor must not reach outside their grants
  error: PermissionDenied: alice@example.test is not authorized to access prefix or name 'bobCo/db/password' with required capability EditSecret
alice: two more secrets, to list and to sweep
  changed=true id-5
alice: and the second
  changed=true id-6
alice: listing yields names and ids, never documents
  aliceCo/api/token=id-6, aliceCo/db/password=id-3, aliceCo/db/username=id-5
alice: startsWith narrows to a subtree
  aliceCo/db/password=id-3, aliceCo/db/username=id-5
alice: in selects an exact set
  aliceCo/api/token=id-6
alice: startsWith and in are mutually exclusive
  error: `filter.catalogName.startsWith` and `.in` are mutually exclusive; provide only one
alice: a filter can never widen scope
  (none)
bob: listing requires ViewSecret
  (none)
alice: deleteSecret takes exactly one of catalogName or prefix
  error: provide exactly one of `catalogName` or `prefix`
alice: and rejects both
  error: provide exactly one of `catalogName` or `prefix`
alice: an empty prefix is rejected
  error: an empty prefix would delete every secret; provide a specific prefix
alice: deleting by name removes just that secret
  aliceCo/db/password
alice: deleting a missing secret is a no-op
  (none)
bob: deleting requires EditSecret
  error: PermissionDenied: bob@example.test is not authorized to access prefix or name 'aliceCo/api/token' with required capability EditSecret
alice: the prefix form is the recursive delete
  aliceCo/api/token, aliceCo/db/username
alice: nothing remains
  (none)
