crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__secrets__test__secrets_pagination.snap
---
source: crates/control-plane-api/src/server/public/graphql/secrets.rs
expression: transcript
---
page: aliceCo/a, aliceCo/b
  hasNextPage=true
page: aliceCo/c
  hasNextPage=false
